css/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --primary:#37B5FF;
    --primary-light:#60C4FF;
    --primary-lightest:#8ED4FE;
    --primary-dark:#0Da5FF;
    --primary-darkest:#029EFB;
    --complement: #FFA02B;
    --complement-light:#FFB457;
    --complement-lightest:#FFC988;
    --complement-dark:#FF8C00;
    --complement-darkest:#FF8C00;

    --font-main:#f5f5f5;
    --font-secondary:#b4b4b4;
    --font-tertiary:#313131;
    --font-quaternary: #000000;
}

body {
    font-family: 'Mukta', sans-serif;
    height: 100vh;
}

.container {
    width: 100%;
    height: 100%;
}

/* HEADER */

.navbar {
    position: fixed;
    top: 0;
    width: 100%;
    height: 60px;
    background-color: var(--primary);
    display: flex;
    justify-content: space-around;
    align-items: center;
    color: var(--font-tertiary);
    z-index: 2;
}

.navbar a {
    text-decoration: none;
    color: var(--font-quaternary);
    font-size: 24px;
    font-weight: 600;
    padding: 10px;
}

.navbar ul {
    list-style-type: none;
    display: flex;
}

.navbar ul li {
    margin-left: 20px;
    text-transform: uppercase;
}

.navbar ul li a {
    font-size: 18px;
}

.navbar a:hover {
    color: var(--font-tertiary);
    font-weight: 900;
}

/* ALL SECTIONS */

section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 100%;
    height: 100vh;
}

h1 {
    font-size: 50px;
    margin-bottom: 30px;
}

h2 {
    font-size: 24px;
    margin-bottom: 30px;
}

/* INTRO SECTION */

section#intro {
    background-color: var(--font-quaternary);
    background: url('https://source.unsplash.com/4wzRuAb-KWs/1920x1080') no-repeat center center/cover;
}

section#intro .intro-text {
    color: var(--font-main);
}

/* ABOUT SECTION */

.about-img-placeholder {
    border: 4px solid #cfcfcf;
    border-radius: 100px;
    background-color: #e4e4e4;
    height: 200px;
    width: 200px;
    margin-bottom: 30px;
}

.about-content {
    width: 40%;
    font-size: 18px;
    text-align: justify;
}

.about-content p {
    margin: 20px 0;
}

.about-content a {
    transition: ease-in 0.3s;
    text-decoration: none;
    color: var(--primary-darkest);
}

.about-content a:hover {
    text-decoration: underline;
    color: var(--font-quaternary);
}

/* SKILLS SECTION */
.skills-text {
    width: 30%;
    margin-bottom: 30px;
}

.skills h2 {
    margin: 10px;
}
.skills-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content:center;
    width: 30%;
}

.skills-card {
    background-color: var(--font-main);
    border: 2px solid var(--primary-lightest);
    border-radius: 10px;
    padding: 15px;
    margin: 10px;
    height: 100px;
    width: 100px;
    display: flex;
    flex-direction: column;
}

.skills-card:hover {
    transition: ease-in 0.3s;
    border-width: 3px;
    box-shadow: 4px 4px 8px var(--primary-light);
}

.skills-card-img {
    width: 100%;
}

/* WORK SECTION */

.work-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 80%;
}

.work-card {
    border: 2px solid chocolate;
    border-radius: 5px;
    display: flex;
    width: 400px;
    height: 254px;
    margin: 10px;
}

.work-card-img {
    height: 100%;
    width: 100%;
    background-color: burlywood;
    background: url('/img/MyPost.png') no-repeat left center/cover;
    border-radius: 3px;
}

.work-card-text {
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.work-card-text .header {
    font-size: 20px;
    margin: 15px;
}

.work-card-text .work-card-main {
    font-size: 16px;
    margin: 15px;
}

.work-card-text .work-card-minor {
    font-size: 12px;
}

.work-card-text .footer {
    font-size: 12px;
    margin: 15px;
    display: flex;
    justify-content: flex-end;
}

.work-card-text .footer a {
    text-decoration: none;
    transition: ease-in 0.3s;
    text-decoration: none;
    color: var(--primary-darkest);
}

.work-card-text .footer a:hover {
    text-decoration: underline;
    color: var(--font-quaternary);
}

/* CONTACT SECTION */
.contact {
    background-color: #292929;
}

section#contact h1 {
    color: var(--font-main);
}

.contact h2 {
    color: var(--font-main);
}

.contact a {
    text-decoration: none;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 600;
    color: var(--font-main);
    font-size: 16px;
}

.contact a:hover {
    text-decoration: underline;
    color: var(--font-quaternary);
    font-weight: 900;
}

/* RESUME SECTION */

.resume a {
    text-decoration: none;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 600;
    color: var(--font-quaternary);
    font-size: 16px;
}

.resume a:hover {
    text-decoration: underline;
    color: var(--font-tertiary);
    font-weight: 900;
}

.resume a:visited {
    text-decoration: none;
    color: var(--font-tertiary);
}

/* FOOTER SECTION */

footer {
    position: fixed;
    bottom: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 60px;
    width: 100%;
    font-size: 14px;
    background-color: var(--primary);
    z-index: 2;
}

footer ul {
    list-style-type: none;
    display: flex;
}

.built-by {
    padding-top: 10px;
}

.socials li {
    padding: 0 10px;
    font-size: 24px;
}

footer ion-icon {
    color: var(--font-quaternary);
}

footer ion-icon:hover {
    font-size: 26px;
    color: var(--font-tertiary);
}

/* MEDIA QUERIES */

@media screen and (max-width: 1536) {
    h1 {
        font-size: 40px;
        margin-bottom: 10px;
    }
    
    h2 {
        font-size: 20px;
        margin-bottom: 10px;
    }

    .skills-cards {
        width: 40%;
    }
    .work-cards {
        width: 85%;
    }

    .work-card {
        width: 250px;
        height: 200px;
        margin: 10px;
    }

    .work-card-text .header {
        font-size: 18px;
        margin: 10px;
    }
    
    .work-card-text .work-card-main {
        font-size: 16px;
        margin: 10px;
    }
    
    .work-card-text .work-card-minor {
        font-size: 10px;
    }
    
    .work-card-text .footer {
        font-size: 12px;
        margin: 10px;


    }

}

@media screen and (max-width: 1366px) {
    h1 {
        font-size: 40px;
        margin-bottom: 15px;
    }
    
    h2 {
        font-size: 20px;
        margin-bottom: 15px;
    }

    .skills-cards {
        width: 50%;
    }

    .about-content {
        width: 50%;
    }
    
    .about-content p {
        margin: 15px 0;
    }

    .work-cards {
        width: 90%;
    }

    .work-card {
        width: 250px;
        height: 200px;
        margin: 10px;
    }

    .work-card-text .header {
        font-size: 18px;
        margin: 10px;
    }
    
    .work-card-text .work-card-main {
        font-size: 16px;
        margin: 10px;
    }
    
    .work-card-text .work-card-minor {
        font-size: 10px;
    }
    
    .work-card-text .footer {
        font-size: 12px;
        margin: 10px;


    }
}

@media screen and (max-width: 1024px) {
    h1 {
        font-size: 38px;
        margin-bottom: 10px;
    }
    
    h2 {
        font-size: 20px;
        margin-bottom: 10px;
    }

    .skills-text {
        width: 40%;
        margin-bottom: 20px;
    }

    .skills-cards {
        width: 60%;
    }

    .about-content {
        width: 60%;
    }
    
    .about-content p {
        margin: 10px 0;
    }

    .work-cards {
        width: 95%;
    }

    .work-card {
        width: 250px;
        height: 200px;
        margin: 10px;
    }

    .work-card-text .header {
        font-size: 18px;
        margin: 10px;
    }
    
    .work-card-text .work-card-main {
        font-size: 16px;
        margin: 10px;
    }
    
    .work-card-text .work-card-minor {
        font-size: 10px;
    }
    
    .work-card-text .footer {
        font-size: 12px;
        margin: 10px;


    }
}

@media screen and (max-width: 414px) {
    h1 {
        font-size: 32px;
        margin-bottom: 5px;
    }
    
    h2 {
        font-size: 16px;
        margin-bottom: 5px;
    }
    
    .skills-text {
        width: 90%;
        margin-bottom: 20px;
    }

    .skills-cards {
        width: 90%;
    }

    .about-content {
        width: 90%;
    }
    
    .about-img-placeholder {
        border-radius: 75px;
        height: 150px;
        width: 150px;
        margin-bottom: 15px;
    }

    .about-content p {
        margin: 5px 0;
    }

    .work-card-img {
        display: none;
    }

    .work-card {
        width: 250px;
        height: 150px;
        margin: 10px;
    }

    .work-card-text .header {
        font-size: 18px;
        margin: 5px;
    }
}

@media screen and (max-width: 360px) {
    h1 {
        font-size: 28px;
        margin-bottom: 5px;
    }
    
    h2 {
        font-size: 16px;
        margin-bottom: 5px;
    }
    
    .skills-text {
        
        margin-bottom: 10px;
    }

    .skills-cards {
        width: 90%;
    }

    .skills-card {
        border-radius: 10px;
        padding: 5px;
        margin: 5px;
        height: 80px;
        width: 80px;
        display: flex;
        flex-direction: column;
    }

    .about-content {
        width: 95%;
        font-size: 16px;
    }
    
    .about-img-placeholder {
        border-radius: 75px;
        height: 100px;
        width: 100px;
        margin-bottom: 10px;
    }

    .about-content p {
        margin: 5px 0;
    }

    .work-card-img {
        display: none;
    }

    .work-card {
        width: 250px;
        height: 150px;
        margin: 10px;
    }

    .work-card-text .header {
        font-size: 18px;
        margin: 5px;
    }
}

